# scope-footswitch

./: .gitmodules  48-scope-footswitch-dfu.rules  LICENSE-HW  LICENSE-SW  README.md  scope-footswitch.ioc
doc/captures/: dpo3034.lsusb  dpo3034_idn.pcapng  dpo3034_runstop.pcapng  dso9404A.lsusb  dso9404a_idn.pcapng  dso9404a_runstop.pcapng
hw/: fp-lib-table  scope-footswitch.ioc  scope-footswitch.kicad_pcb  scope-footswitch.pro  scope-footswitch.sch  sym-lib-table
hw/outputs_2018-08-10/: scope-footswitch-B.Cu.gbl  scope-footswitch-B.Mask.gbs  scope-footswitch-B.Paste.gbp  scope-footswitch-B.SilkS.gbo  scope-footswitch-Edge.Cuts.gm1  scope-footswitch-F.Cu.gtl  scope-footswitch-F.Mask.gts  scope-footswitch-F.Paste.gtp  scope-footswitch-F.SilkS.gto  scope-footswitch.drl
hw/outputs_2018-08-15/: scope-footswitch-B.Paste.gbp  scope-footswitch-B.SilkS.gbo  scope-footswitch-F.Paste.gtp  scope-footswitch.drl
hw/rev1.1/bom/: scope-footswitch.csv
hw/rev1.1/fab/: scope-footswitch-B.Cu.gbl  scope-footswitch-B.Mask.gbs  scope-footswitch-Edge.Cuts.gm1  scope-footswitch-F.Cu.gtl  scope-footswitch-F.Mask.gts  scope-footswitch-F.SilkS.gto
hw/rev1.4/bom/: scope-footswitch.csv
hw/rev1.4/fab/: scope-footswitch-B.Cu.gbl  scope-footswitch-B.Mask.gbs  scope-footswitch-B.Paste.gbp  scope-footswitch-B.SilkS.gbo  scope-footswitch-Edge.Cuts.gm1  scope-footswitch-F.Cu.gtl  scope-footswitch-F.Mask.gts  scope-footswitch-F.Paste.gtp  scope-footswitch-F.SilkS.gto  (+1 more)
sw/: .clang-format  .gitignore
sw/USB_HOST_NUCLEO/: main.c  mcuconf.h
sw/bootloader/: Makefile  dfu_f4.c  dfucore.c  flash.sh  hidcore.c  hidprog.h  hidprog_cmds.h  main.c  rules.mk  usbdfu.h  usbhid.h
sw/common/: hidprog.c  hidprog.h  hidprog_cmds.h  image_header.h
sw/proggui/: CMakeLists.txt  license.h  proggui.c  proggui.manifest  proggui.rc  resource.h
sw/progtool/: CMakeLists.txt  hidprog.c  progtool.c
sw/scope-footswitch/: Makefile  chconf.h  dfu.sh  events.c  events.h  gdbinit  halconf.h  halconf_community.h  image_header.h  led_manager.c  led_manager.h  main.c  mcuconf.h  mcuconf_community.h  scope.c  scope.h  usbh_additional_class_drivers.h  usbh_usbtmc.c  usbh_usbtmc.h  ws2812.c  ws2812.h
sw/tmcemu/: Makefile  README.md  chconf.h  flash.sh  hal_usb_cdc.h  halconf.h  main.c  mcuconf.h  scpi_integ.c  usb_tmc.c  usb_tmc.h  usbcfg.c  usbcfg.h
(+4 files in other folders)
